# sdl2-snake

./: CMakeLists.txt  README.md
include/: Game.h  GameUtils.h  RenderWindow.h  Sprite.h
src/: Game.cpp  RenderWindow.cpp  Sprite.cpp  main.cpp
